--- a/app/views/scrum_board/index.html.erb
+++ b/app/views/scrum_board/index.html.erb
@@ -1,1 +1,7 @@
 <h1>All Projects</h1>
+
+<% @projects.each do |proj| %>
+  <%= proj.title %>
+<% end %>
+
+<%= link_to "Create a New Board", new_scrum_board_path %>
