--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Projects</h1>
 
 <% @projects.each do |proj| %>
-  <%= proj.title %>
+  <%= link_to proj.title, scrum_board_path(proj) %>
 <% end %>
 
 <%= link_to "Create a New Board", new_scrum_board_path %>
