--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,8 @@
 <h1>All Projects</h1>
-
+<ul>
 <% @projects.each do |proj| %>
-  <%= link_to proj.title, project_path(proj) %>
+  <li><%= link_to proj.title, project_path(proj) %></li>
 <% end %>
+</ul>
 
-<%= link_to "Create a New Board", new_project_path %>
+<%= link_to "Create a New Board", new_project_path, class: "btn btn-success" %>
