--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,21 @@
-<h1>Project Status</h1>
+<div class="row text-center">
+  <h1><%= @project.title %></h1>
+</div>
 
-<h2>Title: <%= @project.title %></h2>
+<div class="row text-center">
+  <div class="col-sm-3" id="backlog">
+    <h3>Backlog</h3>
+  </div>
+
+  <div class="col-sm-3">
+    <h3>Current Sprint</h3>
+  </div>
+
+  <div class="col-sm-3">
+    <h3>In Progress</h3>
+  </div>
+
+  <div class="col-sm-3">
+    <h3>Done</h3>
+  </div>
+</div>
