you can now update tasks

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,6 +17,7 @@
         <p><%= task.title %></p>
         <p><%= task.description %></p>
         <p><%= task.status %></p>
+        <%= link_to "Update Status", task_path(task), class: "btn btn-default" %>
       </div>
     <% end %>
   </div>
@@ -28,6 +29,7 @@
         <p><%= task.title %></p>
         <p><%= task.description %></p>
         <p><%= task.status %></p>
+        <%= link_to "Update Status", task_path(task), class: "btn btn-default" %>
       </div>
     <% end %>
   </div>
@@ -39,6 +41,7 @@
         <p><%= task.title %></p>
         <p><%= task.description %></p>
         <p><%= task.status %></p>
+          <%= link_to "Update Status", task_path(task), class: "btn btn-default" %>
       </div>
     <% end %>
   </div>
@@ -50,6 +53,7 @@
         <p><%= task.title %></p>
         <p><%= task.description %></p>
         <p><%= task.status %></p>
+          <%= link_to "Update Status", task_path(task), class: "btn btn-default" %>
       </div>
     <% end %>
   </div>
