--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,6 +18,7 @@
         <p><%= task.description %></p>
         <p><%= task.status %></p>
         <%= link_to "Update Status", task_path(task), class: "btn btn-default" %>
+<!--         <%= link_to "Delete", task_path(task), method: :delete, class: "btn btn-danger" %> -->
       </div>
     <% end %>
   </div>
